# 3-Beginer-AI-Projects

./: README.md
Project1/: .env  main.py  pyproject.toml
Project2/: main.py  pyproject.toml
Project3/: pyproject.toml
