[project]
name = "3-beginer-ai-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.26.0",
    "opencv-python>=4.11.0.86",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "tensorflow>=2.19.0",
]
